--- a/scss/_constrcutionInner.scss
+++ b/scss/_constrcutionInner.scss
@@ -463,6 +463,7 @@
                 }
 
                 .swiper-scrollbar {
+                    width: 100%;
                     height: 1px;
 
                     .swiper-scrollbar-drag {
